crash/assert in fd_set_viewport_states
I noticed we hit a failed assert in fd_set_viewport_states()
w/ gnome-shell over the weekend, minx
/miny
are negative. I suspect it is using a viewport w/ negative x/y??
I noticed we hit a failed assert in fd_set_viewport_states()
w/ gnome-shell over the weekend, minx
/miny
are negative. I suspect it is using a viewport w/ negative x/y??